--- a/MalphiteTheRock/MalphiteTheRock/MalphiteTheRock.csproj
+++ b/MalphiteTheRock/MalphiteTheRock/MalphiteTheRock.csproj
@@ -36,25 +36,25 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="clipper_library">
-      <HintPath>D:\L#\LeagueSharp\\System\clipper_library.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\clipper_library.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp">
-      <HintPath>D:\L#\LeagueSharp\\System\LeagueSharp.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>D:\L#\LeagueSharp\\System\LeagueSharp.Common.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>D:\L#\LeagueSharp\\System\SharpDX.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>D:\L#\LeagueSharp\\System\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Toolkit">
-      <HintPath>D:\L#\LeagueSharp\\System\SharpDX.Toolkit.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\SharpDX.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Toolkit.Graphics">
-      <HintPath>D:\L#\LeagueSharp\\System\SharpDX.Toolkit.Graphics.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\SharpDX.Toolkit.Graphics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
