--- a/Master Series/Master Series.csproj
+++ b/Master Series/Master Series.csproj
@@ -54,16 +54,16 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="LeagueSharp">
-      <HintPath>D:\L#\LeagueSharp\\System\LeagueSharp.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>D:\L#\LeagueSharp\\System\LeagueSharp.Common.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>D:\L#\LeagueSharp\\System\SharpDX.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>D:\L#\LeagueSharp\\System\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>D:\L#\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
