--- a/Irelia Reloaded/Irelia Reloaded.csproj
+++ b/Irelia Reloaded/Irelia Reloaded.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{93F1AF21-9F6A-4834-8A1F-CC051B78E588}</ProjectGuid>
+    <ProjectGuid>{2B1073BA-80F0-4C9B-B152-535CDF580D8E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RLProjectJunglePlay</RootNamespace>
-    <AssemblyName>RLProjectJunglePlay</AssemblyName>
+    <RootNamespace>Irelia_Reloaded</RootNamespace>
+    <AssemblyName>Irelia Reloaded</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PreBuildEvent />
@@ -41,10 +41,12 @@
     <Reference Include="LeagueSharp.Common">
       <HintPath>D:\L#\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
-    <Reference Include="SharpDX">
+    <Reference Include="SharpDX, Version=2.6.2.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\L#\LeagueSharp\System\SharpDX.dll</HintPath>
     </Reference>
-    <Reference Include="SharpDX.Direct3D9">
+    <Reference Include="SharpDX.Direct3D9, Version=2.6.2.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\L#\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -57,14 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CaptureLib.cs" />
-    <Compile Include="RLProjectItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Readini.cs" />
-    <Compile Include="AddOn\Damage.cs" />
-    <Compile Include="AddOn\Orbwalking.cs" />
-    <Compile Include="AddOn.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
