--- a/Irelia Reloaded/Irelia Reloaded.csproj
+++ b/Irelia Reloaded/Irelia Reloaded.csproj
@@ -36,18 +36,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="LeagueSharp">
-      <HintPath>D:\L#\LeagueSharp\System\LeagueSharp.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>D:\L#\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX, Version=2.6.2.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\L#\LeagueSharp\System\SharpDX.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9, Version=2.6.2.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\L#\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
