--- a/FuckingAwesomeLeeSin/FuckingAwesomeLeeSin.csproj
+++ b/FuckingAwesomeLeeSin/FuckingAwesomeLeeSin.csproj
@@ -36,38 +36,38 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BehaviorSharp">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\BehaviorSharp.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\BehaviorSharp.dll</HintPath>
     </Reference>
     <Reference Include="clipper_library">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\clipper_library.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\clipper_library.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\LeagueSharp.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Sandbox">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\LeagueSharp.Sandbox.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\LeagueSharp.Sandbox.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
       <HintPath>C:\Users\CoreyJames\Desktop\LeagueSharp\System\SharpDX.dll</HintPath>
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\SharpDX.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\LeagueSharp.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\LeagueSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeagueSharp.Common">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\LeagueSharp.Common.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\LeagueSharp.Common.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\SharpDX.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.XInput">
-      <HintPath>D:\New Folder\LeagueSharp_514_NulledIO\LeagueSharp_514\LeagueSharp\System\SharpDX.XInput.dll</HintPath>
+      <HintPath>D:\New Folder\LeagueSharp_514\LeagueSharp_514\System\SharpDX.XInput.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
